--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-kit",
+  "name": "password-generator",
   "version": 2,
   "builds": [
     {
@@ -8,5 +8,5 @@
     }
   ],
   "routes": [{ "src": "/(.*)", "dest": "dist/$1" }],
-  "alias": ["starter-kit.now.sh"]
+  "alias": ["password-generator.now.sh"]
 }
