--- a/now.json
+++ b/now.json
@@ -8,5 +8,5 @@
     }
   ],
   "routes": [{ "src": "/(.*)", "dest": "dist/$1" }],
-  "alias": ["password-generator.now.sh"]
+  "alias": ["password-generator-coffee.now.sh"]
 }
